@@ -1,3 +1,12 @@
+2018-09-24  Craig Blackmore  <craig.blackmore@embecosm.com>
+
+	* riscv-tdep.c (set_have_nonsteppable_watchpoint): Add callback
+	for 'set riscv have_nonsteppable_watchpoint'.
+	(show_have_nonsteppable_watchpoint): Add callback for
+	'show riscv have_nonsteppable_watchpoint'.
+	(riscv_gdbarch_init): Initialise gdbarch setting for
+	have_nonesteppable_watchpoint.
+
 2018-09-07  Tom Tromey  <tom@tromey.com>
 
 	* python/python.c (execute_gdb_command): Call bpstat_do_actions
